[project]
name = "loop-engineering-demo"
version = "0.1.0"
description = "워크플로 → 루프 엔지니어링 라이브 데모 (2시간 멘토링 세션용)"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    # --- 에이전트 프레임워크 ---
    "langgraph>=1.2,<2",
    "langchain>=1.3,<2",
    "langchain-openai>=1.3,<2",
    "langchain-ollama>=1.1,<2",
    "langchain-tavily>=0.2",
    "deepagents>=0.6,<0.7",
    # --- 관측(Observability) ---
    "langfuse>=4.14,<5",
    "openinference-instrumentation-langchain>=0.1.67",
    "opentelemetry-sdk>=1.43",
    "opentelemetry-exporter-otlp-proto-http>=1.43",
    # --- RAG ---
    "faiss-cpu>=1.14",
    # --- 유틸 ---
    "python-dotenv>=1.0",
    "rich>=13.7",
    "grandalf>=0.8",        # 그래프 ASCII 렌더링(오프라인 폴백)
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4",
    "nbconvert>=7.16",
    "ipykernel>=6.29",
    "jupytext>=1.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 데모 노트북들이 어느 위치에서든 `from common...`, `from demo1_workflow_to_loop...`를
# 임포트할 수 있도록 레포 자체를 editable 패키지로 설치한다 (uv sync 시 자동).
[tool.hatch.build.targets.wheel]
packages = [
    "common",
    "demo1_workflow_to_loop",
    "demo2_hitl",
    "demo3_langfuse_loop",
    "demo4_otel_swap",
    "demo5_deepagents",
]
